View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032338 | Open CASCADE | OCCT:Visualization | public | 2021-04-28 10:36 | 2021-12-17 18:41 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | feature | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032338: Visualization - provide straightforward interface for ray-picking | ||||
Description | Current interface of selector embeds ray-selection logic into Rectangular Frustum volume intersection logic without direct ability to distinguish them. This might be misleading in some cases, where only intersection with ray is considered, as there is no way defining a Rectangular Frustum of zero thickness. | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | vselect/axis/A1 | ||||
related to | 0031548 | closed | bugmaster | Open CASCADE | Visualization, SelectBasics_PickResult - include surface normal into picking details |
parent of | 0032385 | closed | bugmaster | Open CASCADE | Coding - New msvc10 warnings after integration fix for 32338 |
related to | 0032337 | closed | bugmaster | Open CASCADE | Visualization - rename Overlaps() method in selection to more self-describable names |
related to | 0032365 | closed | bugmaster | Open CASCADE | Visualization - refactoring of viewer selector |
related to | 0032387 | closed | bugmaster | Open CASCADE | Visualization - use interface of ray-picking for selection/highlighting for XR pose |
related to | 0032388 | closed | bugmaster | Open CASCADE | Visualization - provide ray-picking interface with zero tolerance for rectangular frustum |
related to | 0032389 | closed | bugmaster | Open CASCADE | Visualization, AIS_Axis - simple ray creation and displaying |
|
Branch CR32338 has been created by osa. SHA-1: 595b8f0688b3322a0865d3d30006eaf59d2d62f6 Detailed log of new commits: Author: osa Date: Tue May 18 10:07:59 2021 +0300 0032338: Visualization - provide straightforward interface for ray-picking |
|
Branch CR32338 has been updated forcibly by osa. SHA-1: c856608bd5914a94f4d56874db11f0aa73d9df7f |
|
http://jenkins-test-occt/view/CR32338-CR32338-OSA/view/ALL/ |
|
Patches are ready to review: - OCCT: CR32338 - OCCT Products: CR32338 |
|
axo.png (35,231 bytes) |
|
front.png (9,627 bytes) |
|
Combination - OCCT branch : IR-2021-05-21 master SHA - 2aa0a6991da6f767c2a6a4c1d6d720fee35867ce a87b7ddc8cb44606b91e3f37113847c3f5f50fdc Products branch : IR-2021-05-21 SHA - e89cefb48fe77db69215a5124b453f69d9db404b was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17862.650000000373 / 17879.470000000332 [-0.09%] Products Total CPU difference: 11535.410000000107 / 11557.880000000083 [-0.19%] Windows-64-VC14: OCCT Total CPU difference: 19361.25 / 19400.171875 [-0.20%] Products Total CPU difference: 12920.28125 / 12880.234375 [+0.31%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32338 has been deleted by mnt. SHA-1: c856608bd5914a94f4d56874db11f0aa73d9df7f |
occt: master 0461e7fd 2021-05-18 07:07:59 Committer: bugmaster Details Diff |
0032338: Visualization - provide straightforward interface for ray-picking |
Affected Issues 0032338 |
|
mod - src/AIS/AIS_ViewController.cxx | Diff File | ||
mod - src/AIS/AIS_ViewController.hxx | Diff File | ||
mod - src/BVH/BVH_Tools.hxx | Diff File | ||
mod - src/SelectMgr/FILES | Diff File | ||
add - src/SelectMgr/SelectMgr_AxisIntersector.cxx | Diff File | ||
add - src/SelectMgr/SelectMgr_AxisIntersector.hxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_SelectingVolumeManager.cxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_SelectingVolumeManager.hxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_ViewerSelector3d.cxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_ViewerSelector3d.hxx | Diff File | ||
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx | Diff File | ||
add - tests/vselect/axis/A1 | Diff File | ||
occt-products: master e89cefb4 2021-05-21 11:58:03 Committer: bugmaster Details Diff |
0032338: Visualization - provide straightforward interface for ray-picking |
Affected Issues 0032338 |
|
mod - diff | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-04-28 10:36 | kgv | New Issue | |
2021-04-28 10:36 | kgv | Assigned To | => mkrylova |
2021-04-28 10:36 | kgv | Relationship added | related to 0031548 |
2021-05-11 14:45 | kgv | Assigned To | mkrylova => osa |
2021-05-11 14:45 | kgv | Status | new => assigned |
2021-05-12 18:48 | kgv | Relationship added | related to 0032337 |
2021-05-13 11:44 | osa | Relationship added | related to 0032365 |
2021-05-20 18:58 | git | Note Added: 0101217 | |
2021-05-21 14:39 | git | Note Added: 0101237 | |
2021-05-21 14:42 | osa | Note Added: 0101238 | |
2021-05-21 14:43 | osa | Note Added: 0101239 | |
2021-05-21 14:43 | osa | Assigned To | osa => kgv |
2021-05-21 14:43 | osa | Status | assigned => resolved |
2021-05-21 14:43 | osa | Steps to Reproduce Updated | |
2021-05-21 14:46 | osa | File Added: axo.png | |
2021-05-21 14:46 | osa | File Added: left.png | |
2021-05-21 14:47 | osa | File Deleted: left.png | |
2021-05-21 14:50 | osa | File Added: front.png | |
2021-05-21 14:54 | kgv | Assigned To | kgv => bugmaster |
2021-05-21 14:54 | kgv | Status | resolved => reviewed |
2021-05-22 12:25 | bugmaster | Note Added: 0101259 | |
2021-05-22 12:25 | bugmaster | Status | reviewed => tested |
2021-05-22 12:33 | bugmaster | Test case number | => vselect/axis/A1 |
2021-05-22 12:38 | bugmaster | Changeset attached | => occt master 0461e7fd |
2021-05-22 12:38 | bugmaster | Status | tested => verified |
2021-05-22 12:38 | bugmaster | Resolution | open => fixed |
2021-05-22 12:38 | kgv | Relationship added | parent of 0032385 |
2021-05-22 13:54 | git | Note Added: 0101274 | |
2021-05-24 15:33 | osa | Relationship added | related to 0032387 |
2021-05-24 16:19 | osa | Relationship added | related to 0032388 |
2021-05-24 16:48 | osa | Relationship added | related to 0032389 |
2021-12-17 18:41 | bugmaster | Changeset attached | => occt-products master e89cefb4 |