0032338: Visualization - provide straightforward interface for ray-picking